--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "sampleProject",
+  "name": "sampleproject",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@babel/cli": "^7.8.3",
+    "@babel/core": "^7.8.3",
+    "@babel/plugin-proposal-class-properties": "^7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@babel/preset-react": "^7.8.3",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
