removed all unnecesary files, refaktored code and added one option to eslint.

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -30,6 +30,12 @@
   "settings": {
     "react": {
       "version": "detect"
+    },
+    "import/resolver": {
+      "node": {
+        "paths": ["src"],
+        "extensions": [".js", ".jsx", ".ts", ".tsx"]
+      }
     }
   },
   "parser": "babel-eslint"
