--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "dependencies": {
     "@reach/router": "^1.2.1",
+    "bootstrap": "^4.4.1",
     "firebase": "^7.7.0",
     "re-base": "^4.0.0",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.0-beta.16",
     "react-dom": "^16.12.0",
     "react-redux": "^7.1.3",
     "redux": "^4.0.5"
